cluster/app/home/vaultwarden/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  parentRefs:
  - name: shared-gateway
    namespace: default
  hostnames:
    - "vault.thoughtless.eu"
  rules:
  - filters:
      - type: RequestRedirect
        requestRedirect:
          scheme: https
          statusCode: 301
  - matches:
    - path:
        value: /
    backendRefs:
    - name: vaultwarden
      port: 80
